--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -8,10 +8,10 @@
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentEnd="true"
-                  android:layout_marginTop="4dp"
                   android:layout_marginBottom="4dp"
                   android:layout_marginEnd="12dp"
                   android:layout_marginStart="48dp"
+                  android:layout_marginTop="4dp"
                   android:background="@drawable/chat_item_me"
                   android:orientation="vertical"
                   android:padding="12dp">
@@ -19,6 +19,7 @@
         <TextView android:id="@+id/chat_user_message"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
+                  android:autoLink="web|email|map"
                   android:textColor="@color/pure_white"
                   android:textSize="@dimen/body_font_size"
                   tools:text="test dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf df "
