--- a/app/src/main/res/layout/activity_new_post_create.xml
+++ b/app/src/main/res/layout/activity_new_post_create.xml
@@ -60,10 +60,10 @@
             android:imeOptions="actionDone"
             android:inputType="textMultiLine|textNoSuggestions|textCapSentences"
             android:maxLines="8"
-            tools:text = "HELLO THEREHELLO THEREHELLO THEREHELLO THERE "
             android:textColor="#000000"
             android:textSize="28sp"
             android:textStyle="italic"
+            tools:text="HELLO THEREHELLO THEREHELLO THEREHELLO THERE "
         />
 
 
@@ -190,32 +190,24 @@
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:gravity="center_horizontal"
+                  android:gravity="center"
                   android:orientation="horizontal"
-                  android:weightSum="8">
+    >
 
-        <com.linute.linute.UtilsAndHelpers.SquareCheckbox android:id="@+id/anon_comments"
-                                                          android:layout_width="0px"
-                                                          android:layout_height="match_parent"
-                                                          android:layout_margin="8dp"
-                                                          android:layout_weight="1"
-                                                          android:background="@drawable/turn_anon_comments_off"
-                                                          android:button="@null"
-                                                          android:checked="true"
+        <CheckBox android:id="@+id/anon_comments"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginEnd="50dp"
+                  android:button="@drawable/turn_anon_comments_off"
+                  android:checked="true"
         />
 
-        <View android:layout_width="0px"
-              android:layout_height="wrap_content"
-              android:layout_weight="2"/>
 
-
-        <com.linute.linute.UtilsAndHelpers.SquareCheckbox android:id="@+id/anon_post"
-                                                          android:layout_width="0px"
-                                                          android:layout_height="match_parent"
-                                                          android:layout_margin="8dp"
-                                                          android:layout_weight="1"
-                                                          android:background="@drawable/post_as_anon_checkbox"
-                                                          android:button="@null"
+        <CheckBox android:id="@+id/anon_post"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginStart="50dp"
+                  android:button="@drawable/post_as_anon_checkbox"
         />
 
     </LinearLayout>
