--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -17,20 +17,27 @@
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:layout_alignParentBottom="true"
-                  android:background="@color/pure_white"
-                  android:paddingStart="@dimen/activity_horizontal_margin">
+                  android:background="@color/pure_white">
 
 
+        <ImageView android:id="@+id/attach"
+                   android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:padding="4dp"
+                   android:layout_gravity="center_vertical"
+                   android:background="?selectableItemBackgroundBorderless"
+                   android:src="@drawable/ic_upload_picture"
+        />
 
         <EditText
             android:id="@+id/message_input"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@null"
             android:hint="@string/prompt_message"
             android:inputType="textCapSentences|textShortMessage|textMultiLine"
             android:maxLines="3"
-            android:layout_weight="1"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:singleLine="false"
@@ -42,8 +49,9 @@
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
-                   android:padding="8dp"
                    android:alpha="0.25"
+                   android:background="?selectableItemBackgroundBorderless"
+                   android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_send"
         />
