--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/eighty_black"
                     android:textSize="@dimen/sub_font_size"
-                    android:autoLink="web|email|map"
+                    android:autoLink="web|email"
                     tools:text="test test test testtest test test testtest "/>
 
             </LinearLayout>
