--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -5,9 +5,9 @@
                 android:focusableInTouchMode="true">
 
 
-    <RelativeLayout android:id="@+id/tool_bar_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize">
+    <FrameLayout android:id="@+id/tool_bar_container"
+                 android:layout_width="match_parent"
+                 android:layout_height="?android:attr/actionBarSize">
 
         <android.support.v7.widget.Toolbar android:id="@+id/edit_photo_toolbar"
                                            android:layout_width="match_parent"
@@ -15,17 +15,15 @@
                                            android:background="@color/colorPrimary"
                                            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
-
-
-            <ImageButton
-                android:id="@+id/save_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="16dp"
-                android:background="@android:color/transparent"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_action_check83"/>
-    </RelativeLayout>
+        <ImageButton
+            android:id="@+id/save_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="16dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_action_check83"/>
+    </FrameLayout>
 
     <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView android:id="@+id/video_frame"
                                                                      android:layout_width="match_parent"
@@ -38,49 +36,67 @@
     <com.linute.linute.UtilsAndHelpers.SquareFrameLayout android:id="@+id/square_videoFrame"
                                                          android:layout_width="match_parent"
                                                          android:layout_height="wrap_content"
-                                                         android:layout_below="@id/tool_bar_container"
-    >
+                                                         android:layout_below="@id/tool_bar_container">
+        <FrameLayout android:id="@+id/text_container"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginTop="80dp"
+                     android:visibility="gone"
+        >
 
-        <ImageView android:layout_width="100dp"
-                   android:layout_height="100dp"
-                   android:src="@drawable/ic_cinema"
-                   android:layout_gravity="center"
-                   android:id="@+id/play_icon"/>
-        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+            <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.6"
+                android:background="@android:color/black"
+                android:gravity="center"
+                android:imeOptions="actionDone"
+                android:inputType="textCapSentences|textNoSuggestions"
+                android:lines="1"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:textColor="@android:color/white"
+                android:textSize="14sp"
+            />
 
-    <LinearLayout android:id="@+id/button_layer"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:background="@color/colorPrimary"
-                  android:layout_below="@id/square_videoFrame"
-                  android:gravity="center"
-                  android:weightSum="8">
+        </FrameLayout>
+
+    </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
 
 
-        <com.linute.linute.UtilsAndHelpers.SquareCheckbox android:id="@+id/anon_comments"
-                                                          android:layout_width="0px"
-                                                          android:layout_height="match_parent"
-                                                          android:layout_margin="8dp"
-                                                          android:layout_weight="1"
-                                                          android:background="@drawable/turn_anon_comments_off"
-                                                          android:button="@null"
-                                                          android:checked="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/square_videoFrame"
+        android:background="@color/colorPrimary"
+        android:gravity="center">
+
+
+        <CheckBox android:id="@+id/anon_comments"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center_vertical"
+                  android:layout_marginEnd="50dp"
+                  android:button="@drawable/turn_anon_comments_off"
+                  android:checked="true"
         />
 
-        <View android:layout_width="0px"
-              android:layout_height="wrap_content"
-              android:layout_weight="2"/>
+
+        <CheckBox android:id="@+id/play"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center"
+                  android:button="@drawable/play_pause_checkbox"
+                  android:checked="true"/>
 
 
-        <com.linute.linute.UtilsAndHelpers.SquareCheckbox android:id="@+id/anon_post"
-                                                          android:layout_width="0px"
-                                                          android:layout_height="match_parent"
-                                                          android:layout_marginEnd="16dp"
-                                                          android:layout_marginStart="16dp"
-                                                          android:layout_weight="1"
-                                                          android:background="@drawable/post_as_anon_checkbox"
-                                                          android:button="@null"/>
-
+        <CheckBox android:id="@+id/anon_post"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center_vertical|end"
+                  android:layout_marginStart="50dp"
+                  android:button="@drawable/post_as_anon_checkbox"/>
     </LinearLayout>
 
 
