--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -5,8 +5,8 @@
               android:focusableInTouchMode="true"
               android:orientation="vertical">
 
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize">
+    <FrameLayout android:layout_width="match_parent"
+                 android:layout_height="?android:attr/actionBarSize">
 
         <android.support.v7.widget.Toolbar android:id="@+id/edit_photo_toolbar"
                                            android:layout_width="match_parent"
@@ -14,10 +14,10 @@
                                            android:background="@color/colorPrimary"
                                            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
-        <RelativeLayout android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="16dp">
+        <FrameLayout android:layout_width="wrap_content"
+                     android:layout_height="match_parent"
+                     android:layout_gravity="center_vertical|end"
+                     android:layout_marginEnd="16dp">
 
             <ImageButton
                 android:id="@+id/save_photo"
@@ -31,18 +31,18 @@
                 style="?android:attr/progressBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_gravity="center"
                 android:visibility="gone"
             />
 
-        </RelativeLayout>
-    </RelativeLayout>
+        </FrameLayout>
+    </FrameLayout>
 
-    <RelativeLayout android:id="@+id/frame"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/white"
-                    android:focusableInTouchMode="true">
+    <FrameLayout android:id="@+id/frame"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:background="@android:color/white"
+                 android:focusableInTouchMode="true">
 
         <com.linute.linute.SquareCamera.SquareImageView
             android:id="@+id/photo"
@@ -61,49 +61,36 @@
             android:gravity="center"
             android:imeOptions="actionDone"
             android:inputType="textCapSentences|textNoSuggestions"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:singleLine="true"
+            android:lines="1"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             android:visibility="gone"
         />
 
-    </RelativeLayout>
+    </FrameLayout>
 
-    <LinearLayout android:id="@+id/editFragment_button_layer"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:background="@color/colorPrimary"
-                  android:gravity="center"
-                  android:weightSum="8">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        android:gravity="center">
 
 
-        <com.linute.linute.UtilsAndHelpers.SquareCheckbox android:id="@+id/anon_comments"
-                                                          android:layout_width="0px"
-                                                          android:layout_height="match_parent"
-                                                          android:layout_margin="8dp"
-                                                          android:layout_weight="1"
-                                                          android:background="@drawable/turn_anon_comments_off"
-                                                          android:button="@null"
-                                                          android:checked="true"
+        <CheckBox android:id="@+id/anon_comments"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginEnd="50dp"
+                  android:button="@drawable/turn_anon_comments_off"
+                  android:checked="true"
         />
 
-        <View android:layout_width="0px"
-              android:layout_height="wrap_content"
-              android:layout_weight="2"/>
-
-
-        <com.linute.linute.UtilsAndHelpers.SquareCheckbox android:id="@+id/editFragment_switch"
-                                                          android:layout_width="0px"
-                                                          android:layout_height="match_parent"
-                                                          android:layout_marginEnd="16dp"
-                                                          android:layout_marginStart="16dp"
-                                                          android:layout_weight="1"
-                                                          android:background="@drawable/post_as_anon_checkbox"
-                                                          android:button="@null"/>
-
+        <CheckBox android:id="@+id/editFragment_switch"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginStart="50dp"
+                  android:button="@drawable/post_as_anon_checkbox"/>
     </LinearLayout>
-
 
 </LinearLayout>
