--- a/app/src/main/res/drawable/notify_mess_icon.xml
+++ b/app/src/main/res/drawable/notify_mess_icon.xml
@@ -3,7 +3,9 @@
 
     <item android:drawable="@drawable/ic_chat81"/>
 
-    <item android:drawable="@drawable/circle_indicator"
-          android:gravity="top|right"/>
+    <item
+        android:gravity="top|right"
+        android:src="@drawable/circle_indicator"
+    />
 
 </layer-list>
