--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -25,7 +25,6 @@
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:layout_gravity="center_vertical"
-                   android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_upload_picture"
         />
 
@@ -45,13 +44,15 @@
         />
 
         <ImageView android:id="@+id/send_button"
-                   android:layout_width="40dp"
-                   android:layout_height="40dp"
+                   android:layout_width="56dp"
+                   android:layout_height="48dp"
                    android:layout_gravity="bottom|end"
-                   android:layout_marginEnd="8dp"
                    android:alpha="0.25"
-                   android:background="?selectableItemBackgroundBorderless"
-                   android:padding="8dp"
+                   android:background="?attr/selectableItemBackground"
+                   android:paddingStart="12dp"
+                   android:paddingEnd="12dp"
+                   android:paddingTop="8dp"
+                   android:paddingBottom="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_send"
         />
@@ -84,6 +85,7 @@
                  android:layout_width="match_parent"
                  android:layout_height="4dp"
                  android:layout_below="@id/chat_fragment_toolbar"
+                 android:indeterminateDrawable="@drawable/camera_progress"
                  android:indeterminate="true"
                  android:visibility="gone"
     />
